Fixed Quest Log Issue

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -377,6 +377,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -484,6 +495,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -549,6 +571,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -630,6 +663,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -699,6 +743,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -812,6 +867,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -883,6 +949,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -967,6 +1044,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1086,6 +1174,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog Sewers</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1119,15 +1218,18 @@
                         He needs you to fix the levers in the tunnel, but he doesn't remember the order to pull the levers he sends you to speak to his aunt Kekant in Krog.                       
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Prudge does not remember how to pull levers to fix the Krog Sewer, but his Aunt Rekant might. Vist her in Krog.</span>
-                        <br>
+                    </p>
+                    <p class="clearfix">    
                         <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Rekant.png" alt="Rekant"><span class="light-red">Aunt Rekant</span> can be found upstairs in the Provisioner shop. Let her know you are here to help her nephew. She will only help you if you help her. Her husband Unga went to Maraket to find work and has not come back. Her friend Aloca said he is going around with a new girl. Go find out for her and she will help you out.
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Find out if Unga in Maraket has a new woman.</span>
-                        <br>
-                        Head south to Maraket and find <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Unga.png" alt="Unga"><span class="light-red">Unga</span>. He will ask you if you want to make some gold. Accept his offer then he will ask you to take a note to Teppu. He and Teppu had a fight and she is avoiding him. Accept the offer to take the note to Teppu.
-                        <br>
+                    </p>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Unga.png" alt="Unga">  
+                      Head south to Maraket and find <span class="light-red">Unga</span>. He will ask you if you want to make some gold. Accept his offer then he will ask you to take a note to Teppu. He and Teppu had a fight and she is avoiding him. Accept the offer to take the note to Teppu.
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Great Disrepair</span><span class="orange">, Deliver note to Teppu in Maraket.</span>
-                        <br>
+                    </p>
+                    <p class="clearfix"> 
                         <img class="npc-img" src="Images/BlackSwamp/Great_Disrepair_Teppu.png" alt="Teppu">Give the note to <span class="light-red">Teppu</span>, she reads it tells you Unga is so sweet that he wants to marry her. 
                         <hr>
                         <ul>
@@ -1215,6 +1317,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog East Mountain</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1270,6 +1383,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Shadow Temple</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1343,6 +1467,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Shadow Temple</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1447,6 +1582,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Maraket</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1533,6 +1679,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Samad</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1625,6 +1782,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1690,6 +1858,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1768,6 +1947,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Krog</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1843,6 +2033,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Maraket</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1915,6 +2116,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Maraket</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1995,6 +2207,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Samad</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -2069,6 +2292,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Black Swamp</td>
+                          <td>Samad</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
