Few Fixes to Images and quest

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -82,7 +82,7 @@
                         </li>
                         <li>
                           <a href="#theAttack">The Attack</a>
-                        </li>
+                        </li>                        
                         <li>
                           <a href="#ofKobold">Of Kobold</a>
                         </li>
@@ -103,11 +103,9 @@
                   <a href="#cliffsideSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Cliffside</a>
                   <ul class="collapse list-unstyled" id="cliffsideSubmenu">
                       <li>
-                          <a href="#forThoseWhoAreBrave"></a>
+                          <a href="#forThoseWhoAreBrave">For Those Who Are Brave</a>
                       </li>
-                      <li>
-                        <a href="#"></a>
-                    </li>
+
                     <li>
                       <a href="#"></a>
                   </li>
@@ -201,7 +199,7 @@
                          </li>
                          <!-- accordion-toggle -->
                          <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#forThoseWhoAreBrave"></a></li>
+                          <li><a class="head" href="#forThoseWhoAreBrave">For Those Who Are Brave</a></li>
                           <li><a class="head" href="#"></a></li>
                           <li><a class="head" href="#"></a></li>
                           <li><a class="head" href="#"></a></li>
@@ -1511,7 +1509,7 @@
                         </thead>    
                         </tr>
                         <tr>
-                          <td>??</td>
+                          <td>Adept</td>
                           <td>Combat</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
@@ -1531,7 +1529,7 @@
                     </table>
                     <hr>
                     <p class="clearfix">
-                        <img class="npc-img" src="Images/SilvestValley/of_Kobolds_Galen.png" alt="Galen"> 
+                        <img class="npc-img" src="Images/SilvestValley/Of_Kobolds_Galen.png" alt="Galen"> 
                         Speak to <span class="light-red">Galen</span> in the cave north of the Kobold fort. Aye, a friendly face for once! I'd welcome ye, but I have naught to spare for food, nor a place to rest upon. But I could help ye if ye wish to know of the kobolds taht overrun the castle... 
                         I can tell by the gleam in thine eye that ye've had a run in with the sneaks! Cowards, the whole breed. When ye cut one down, five more appear! If ye should attack the kobold fort, though, t'would put the fear of man in them. <span class="orange">He leans in</span> Oh, aye, there is another way in... 
                         Seek out the Silvest Mines... inside the windy caverns is a path which will take ye underneath the kobold fort. Head east inside the caverns and you shall surely find the way, though the path is hidden by secret walls... and if ye go that way, perhaps yed like to help me with a little Kobold problem?
@@ -1547,23 +1545,23 @@
                          You have two ways to get in to the Kobold fort. Come in from the Silvest mines north of Cliffside or the Kobold outpost to the west next to the shore. Cliffside is the very long route and encounter more monsters along the way.
                     <ul>
                       <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 1</span> Silvest Mine</li>
-                      <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 2</span> Kavic Cove
+                      <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 2</span> Krazak Cove
                     </ul>
                     </p>
                     <hr>
                     <p class="clearfix">
                       <span class="light-blue">OPTION: 1</span>
                       <br>
-                      <img class="npc-img" src="Images/SilvestValley/" alt="Silvest Mines"> 
+                      <img class="npc-img" src="Images/SilvestValley/Of_Kobold_Silvest_Mine.png" alt="Silvest Mines"> 
+                      Silvest mine route is a much longer route, and more dangerous. You will run in to Skeleton Warriors, Shadows, and Kobold Miners. If you don't follow the map you could get lost as well.
 
-                      <span class="green">QUEST UPDATE: King Kobold killed. Return to Galen</span>
                     </p>
                     <p class="clearfix">
                       <span class="light-blue">OPTION: 2</span>
                       <br>
-                      <img class="npc-img img-map-height" src="Images/SilvestValley/Of_Kobold_Kavic_Cove.png" alt="Kavic Cove">
+                      <img class="npc-img img-map-height" src="Images/SilvestValley/Of_Kobold_Krazak_Cove.png" alt="Kavic Cove">
                       Leave the cave head south to Fort Eastwatch, from there follow the coast north to reach Kavic Cove. In Kavic Cove you will find a samll building with a ladder this is your entrance to the Silvest Mines.
-                      Head west till you get to a stone structured area with a ladder to go up in to the Kobold Fort. In the fort head west, then south, back to the east, enter the door then north to find the <span class="light-red">King Kobold </span> <img class="monster-img" src="Images/NPC/Boss/King_Kobold.png" alt="King Kobold"> 
+                      Head west till you get to a stone structured area with a ladder to go up in to the Kobold Fort. In the fort head west, then south, back to the east, enter the door then north to find the <span class="light-red">King Kobold </span> <img class="monster-img" src="Images/NPC/Boss/King_Kobold.png" alt="King Kobold"> </span> <img src="Images/NPC/Boss/King_Kobold_Stats.png" alt="King Kobold"> 
                       Kill him and be updated to return to Galen for your reward.
                       <br>
                       <span class="green">QUEST UPDATE: King Kobold killed. Return to Galen</span>
@@ -1646,8 +1644,10 @@
                         <hr>
                       </p>
                     <p class="clearfix">
-                          <img class="npc-img img-map-height" src="Images/SilvestValley/" alt=""> 
-                         Go north to the Silvest mines. There are <span class="light-red">Skeleton_Warriors</span> you will have to confront.<img class="monster-img" src="Images/NPC/Monsters/Skeleton_Warrior.png" alt="Skeleton Warrior">  Follow the map to find the location of Struglar. Struglar has been killed and you find his remains.
+                          <img class="npc-img img-map-height" src="Images/SilvestValley/For_Those_Who_Are_Brave_Silvest_Mine.png" alt="Silvest Mine"> 
+                          <img class="monster-img" src="Images/NPC/Monsters/Skeleton_Warrior.png" alt="Skeleton Warrior"> 
+                          <br>
+                         Go north to the Silvest mines. There are <span class="light-red">Skeleton_Warriors</span> you will have to confront. Follow the map to find the location of Struglar. Struglar has been killed and you find his remains. <img class="monster-img" src="Images/SilvestValley/For_Those_Who_Are_Brave_Struglar_Dead_Body.png" alt="Struglar Dead Body"> 
                          <br>
                          <span class="green">This is the body of Struglar, the father of William. You realize you must inform William of the bad news.</span>
                          <br>
@@ -1867,7 +1867,7 @@
                     </p>                    
                     <br>
                     <p class="clearfix">
-                      <img class="npc-img" src="Images/Valinor/Monsters/Orc_Renegade.png" alt="Orc Renegade">                    
+                      <img class="npc-img" src="Images/NPC/Monsters/Orc_Renegade.png" alt="Orc Renegade">                    
                       Head south of Silvest around the moutain to the east to the cave. Kill 40 <span class="light-red">Orc Renegade</span>  while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Orc Renegades for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
                     </p>
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
@@ -1955,7 +1955,7 @@
                     <span class="green">QUEST UPDATE:</span><span class="red"> A Wicked Wand</span><span class="orange">, Val advised you to use the Wicked Looking Wand to slay 40 Thieves.</span>
                     <hr>
                     <p class="clearfix">
-                      <img class="npc-img" src="Images/npc/Monsters/Thief.png" alt="Thief">  
+                      <img class="npc-img" src="Images/NPC/Monsters/Thief.png" alt="Thief">  
                         Head out to the west of silvest to the forest. Kill 40 <span class="light-red">Thieves</span> while the Wicked Looking Wand is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Thieves for Val Clockworks!</span> When you have kill 40 return to Nova to be rewarded. 
                     </p>
                     <span class="green">QUEST UPDATE:</span><span class="red"> A Wicked Wand</span><span class="orange">, Your mission complete, you must now return to Petrim the Peculiar in Silvest</span>
