Added storage Crate to quest

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3856,6 +3856,7 @@
                           <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Foraging_Stick.png" alt="Foraging Stick" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Foraging_Stick_ScreenTip.png' alt='Foraging Stick'>">
                           <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Shovel.png" alt="Shovel" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Shovel_ScreenTip.png' alt='Shovel'>">
                           <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Farming_Guidebook.png" alt="Farming Guidebook" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Farming_Guidebook_ScreenTip.png' alt='Farming Guidebook'>">
+                          <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Storage_Crate.png" alt="Storage Crate" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Storage_Crate_Tooltip.png' alt='Storage Crate'>">
                         </td> 
                       </tr>                         
                   </table>
@@ -3962,13 +3963,14 @@
                     <br>
                     <img class="npc-img" src="Images/Valinor/Monsters/Goblin_Farmer.png" alt="Goblin Farmer">
                     This map shows the location of the Goblin Farmer. <img class="npc-img" src="Images/Valinor/Maps/Goblin_Farmer_Location.png" alt="Map of the location of Goblin Farmer">The Goblin Farmer often prowls around the fields just outside the castle walls. Find the Goblin Farmer in the south east corner of the fields.
-
+                    <br>
                     <br>
                     <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return the foraging stick to the Farmer Trainer.</span>  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECIEVED: Storage Crate</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">5,300</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   You have completed your training in Farming.
