--- a/darkWoods.html
+++ b/darkWoods.html
@@ -1497,6 +1497,82 @@
               </div>
               <!-- End of Sentimental Value -->
               <div class="line"></div>
+              <!-- Start of The Bane of Whisperdale  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="theBaneOfWhisperdale" class="anchor text-center">The Bane of Whisperdale</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>??</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Legrant
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/" alt="Lime" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Sentimental_Value_Razor_Bone_Dagger_Stats.png' alt='Razor Bone Dagger Stats'>">
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/The_Bane_Of_Whisperdale_Legrant.png" alt="Legrant"> 
+                        Speak to <span class="light-red">Legrant</span>, Good day, adventurer. I hope your travels in the Darkwoods are gratifying... Bored you say? There is trouble enough here to last us a lifetime! I'd gladly leave myself, but I promised Lord Vezryl I would guard this gate. Since thye began digging for that cursed crystal, our town has been beset with evil.
+                        We elves had no business digging in the first palce!! Our home is in the trees, in beautifully crafted bows and fine things that make no noises when you slip through the woods... I blather on.. The crystal is an object of small power... nothing to attract the Rune Warriors to this place. However, it could be used to fortify the walls of Whisperdale and bring greater peace to the Darkwoods.
+                        We began digging, and unearthed a chamber sealed long ago. Perhaps sealed by the founders of this great city! Then the marsh lights followed us... Somehow or other, they found the crystal before us. That is when our troubles began. One of the marsh lights must have absorbed the energy from the crystal.It grew in size and power. We call it Baneshine. Many other strange lights can be seen a times - 
+                        and subdue the evil creatures that have made it their home. In fact, when I saw you I thought you had potential. Try to locate the crystal, if you can. Lord Vezryl will surely reward you. Here is the key to the trapdoor. You will need it to get in. If you go east from here there is a small island surrounded by swampy green water. There is a tunnel to get to the island, and another trapdoor. may the gods watch over you! 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> The Bande of Whisperdale</span><span class="orange">, Unsure of what lies ahead, you agree to explore the swampy cave southeast of Whisperdale for Legrant.</span>
+                    </p>    
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/Darkwoods/The_Bane_Of_Whisperdale_Owyn.png" alt="Owyn"> 
+                      Find <span class="light-red">Owyn</span> in the cave. TEEEEK!! A Lag? ... Oh! It's a real LIVING person! Thank the gods! I though you were a ghost. What ever are you doing down here! Did Verzyl send you? 
+                    </p>
+                    <p class="clearfix"> 
+
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Razor Bone Dagger</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">8,250</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>                         
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    You received a Razor Bone Dagger from Sathis for assisting Lord Galun                       
+                  </div>
+                </div>
+              </div>
+              <!-- End of The Bane of Whisperdale -->
+              <div class="line"></div>
                <!-- Start of Advanced Ranger Training -->
                <div class="card bg-main half-width mb-5">
                 <div class="card-header">
